# demo

./: .gitignore  AGENTS.md  CMakeLists.txt  DIRECTION.md  LEARNING.md  README.md
Power_Control/: CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  README.md  database.db  getdata.cpp  getdata.h  getdata.ui  iconhelper.cpp  lang.qrc  logdatalog_data03.30.txt  login.cpp  login.h  login.ui  login1.pro  login1.pro.user.80814ac  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mylog.txt  myqrc.qrc  object_script.ClassRoom.Debug  object_script.ClassRoom.Release  object_script.login.Debug  object_script.login.Release  passwdedit.cpp  register.cpp  savethread.cpp  savethread.h  systemtrayicon.cpp  ui_caozuojl.h  ui_getdata.h  ui_login.h  ui_mainwindow.h  ui_passwdedit.h  ui_register.h
Power_Control/logdata/: log03-30-11-20.txt  log03-30-12-43.txt  log03.30.txt  logsave03-30-17-00.txt  logsave03-30-20-34.txt  logsave04-01-22-34.txt
Power_Control/release/: moc_appinit.cpp  moc_iconhelper.cpp  moc_login.cpp  moc_mainwindow.cpp  moc_passwdedit.cpp  moc_register.cpp  moc_systemtrayicon.cpp  qrc_lang.cpp  qrc_myqrc.cpp  qrc_qss.cpp
